fix: cart address overflow

--- a/erpnext/public/scss/shopping_cart.scss
+++ b/erpnext/public/scss/shopping_cart.scss
@@ -460,6 +460,10 @@ body.product-page {
 		font-weight: 500;
 	}
 
+	.card-body {
+		max-width: 80%;
+	}
+
 	.card-text {
 		font-size: var(--text-md);
 		color: var(--gray-700);
